@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id "io.sentry.jvm.gradle" version "5.9.0"
 }
 
 group = 'akuma'
@@ -11,6 +12,14 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
+}
+
+sentry {
+	includeSourceContext = true
+
+	org = "akuma-ir"
+	projectName = "nuntteo_dev"
+	authToken = System.getenv("SENTRY_AUTH_TOKEN")
 }
 
 configurations {
@@ -30,6 +39,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux' // 버전 명시 X (BOM 관리)
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 
 	// --- Swagger/OpenAPI ---
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
@@ -52,6 +62,10 @@ dependencies {
 	implementation 'com.google.apis:google-api-services-sheets:v4-rev612-1.25.0'
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
 
+	// Sentry BOM 추가하여 버전 관리 일원화
+	implementation platform("io.sentry:sentry-bom:8.19.0")
+	implementation "io.sentry:sentry-spring-boot-starter-jakarta"
+
 	// --- Lombok ---
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -73,15 +87,5 @@ dependencies {
 	testImplementation platform('org.testcontainers:testcontainers-bom:1.21.3')
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:mysql'
-
-	// (선택) 일부 CI 환경에서 필요한 경우만 사용
-	testRuntimeOnly 'net.bytebuddy:byte-buddy-agent:1.14.17'
 }
 
-tasks.withType(Test).configureEach {
-	useJUnitPlatform()
-	// Mockito가 ByteBuddy 에이전트를 self-attach 할 수 있게 허용 (CI에서 static/final 모킹 이슈 방지)
-	jvmArgs += ['-Djdk.attach.allowAttachSelf=true']
-	// JDK 21+를 쓰는 CI라면 아래 한 줄도 고려
-	// jvmArgs += ['-XX:+EnableDynamicAgentLoading']
-}
